bluec-tests/tests/invalid/types_fn_pointer/invalid_initializer3.c
float get(void) {
    return 1.0f;
}

int (*fn)(void) = get;

int main(void) {
    return 0;
}